# flipedit

./: .gitignore  .gitmodules  .roomodes  .tool-versions  .windsurfrules  HOW_TO_USE_IRONDASH.md  README.md  RUSTDESK_RENDERING_IMPLEMENTATION.md  TEXTURE_FIX_README.md  UVMANAGER_INTEGRATION_NOTES.md  devtools_options.yaml  flutter_rust_bridge.yaml  pubspec.yaml
.cursor/rules/: flipedit-cursor-rules.mdc  libraries.mdc  project-architecture.mdc  rules.mdc
assets/: CMakeLists.txt  OPENCV_PYTHON_INTEGRATION.md  README.md  SERVER_README.md  build_texture_bridge.sh  config.py  db_access.py  frame_generator.py  http_server.py  main.py  media_utils.py  message_handler.py  playback_controller.py  preview_server.py  requirements.txt  restart_server.sh  server_monitor.py  server_watchdog.py  texture_bridge.cpp  timeline_manager.py  video_stream_server.py  websocket_server.py
assets/video_services/: __init__.py  compositing_service.py  encoding_service.py  frame_cache_service.py  frame_pipeline_service.py  frame_transform_service.py  timeline_state_service.py  video_source_service.py
docs/: gstreamer-irondash-integration.md  gstreamer-resizing-clips.md  hot-restart-gstreamer-fix.md  video_player_optimization_guide.md
integration_test/: app_test.dart  common_test_setup.dart  drag_and_drop_integration_test.dart  editor_workflow_test.dart  import_media_integration_test.dart  main_editor_journey_test.dart  simple_test.dart  view_menu_integration_test.dart
integration_test/helpers/: editor_helpers.dart
lib/: app.dart  debug_texture_test.dart  main.dart  main_texture_test.dart
lib/comfyui/: comfyui_service.dart
lib/di/: service_locator.dart
lib/docs/: CACHE_INTEGRATION.md
lib/examples/: texture_integration_example.dart
lib/factories/: clip_factory.dart  effect_factory.dart
lib/models/: clip.dart  clip_transform.dart  decoded_frame.dart  effect.dart  project.dart  project_asset.dart  tab_group.dart  tab_item.dart  tab_line.dart  uv_release.dart  video_texture_model.dart
lib/pages/: python_environment_screen.dart
lib/persistence/: change_log_mixin.dart
lib/services/: area_dimensions_service.dart  cached_timeline_composer.dart  canvas_dimensions_service.dart  clip_commands.dart  clip_update_service.dart  command_history_service.dart  composite_video_service.dart  ffmpeg_composite_service.dart  frame_cache_service.dart  (+27 more)
linux/: CMakeLists.txt
macos/: libavdevice.61.dylib  libavutil.59.dylib  libswresample.5.dylib  libswscale.8.dylib
rust/: Cargo.toml  FLUTTER_GPU_INTEGRATION.md  build.rs
rust/src/: audio_handler.rs  frb_generated.rs  lib.rs
rust/src/api/: bridge.rs  simple.rs
rust/src/common/: logging.rs  mod.rs  types.rs
rust/src/ges/: mod.rs  timeline_bridge.rs
rust/src/utils/: mod.rs  testing.rs
rust/src/v2/: mod.rs
rust/src/v2/clips/: audio_clip.rs  clip_operations.rs  mod.rs  video_clip.rs
rust/src/v2/core/: mod.rs  project.rs  timeline.rs  types.rs
rust/src/v2/flutter_bridge/: api.rs  mod.rs  texture_handler.rs
rust/src/v2/rendering/: export.rs  mod.rs  preview.rs  renderer.rs
rust/src/v2/tracks/: audio_track.rs  mod.rs  track_operations.rs  video_track.rs
rust/src/v2/utils/: error.rs  gst_utils.rs  mod.rs
rust/src/video/: direct_pipeline_player.rs  frame_handler.rs  ges_pipeline.rs  ges_timeline.rs  ges_timeline_player.rs  irondash_texture.rs  mod.rs  pipeline.rs  player.rs  texture_registry.rs  timeline_composer.rs  timeline_player.rs  wgpu_texture.rs
rust_builder/: pubspec.yaml
scripts/: run_test.sh
test/: widget_test.dart
test_driver/: integration_test.dart
windows/: CMakeLists.txt
(+216 files in other folders)
