[package]
name = "rust_lib_flipedit"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.7.0"
gstreamer = "0.23.6"
gstreamer-video = "0.23.6"
gstreamer-audio = "0.23.6"
gstreamer-gl = "0.23.6"
gstreamer-editing-services = "0.23.5"
gstreamer-pbutils = "0.23.5"
gstreamer-app = "0.23.5"
log = "0.4"
env_logger = "0.11"
cpal = "0.15"
rubato = "0.15"
tokio = { version = "1.0", features = ["rt", "sync", "time"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
lazy_static = "1.4"
# Provides Rust with access to the Flutter engine's graphics context.
irondash_engine_context = { git = "https://github.com/irondash/irondash.git", rev = "65343873472d6796c0388362a8e04b6e9a499044", package = "irondash_engine_context" }
# The Rust-only crate for creating and managing Flutter external textures.
irondash_texture = { git = "https://github.com/irondash/irondash.git", rev = "65343873472d6796c0388362a8e04b6e9a499044", package = "irondash_texture" }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"

[target.'cfg(target_os = "linux")'.dependencies]
pulse = "0.5"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
coreaudio-rs = "0.11"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = ["Win32_Media_Audio", "Win32_Foundation"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
